初步完成架構